# console_chat

./: .gitignore  CMakeLists.txt  README.md  README.md.old  chat  chat.cpp  chat.h  console_chat.sln  console_chat.vcxproj  console_chat.vcxproj.filters  main.cpp  message.cpp  message.h  resource.h  sha1.cpp  sha1.h  user.cpp  user.h  users.cpp
